# theundercut

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  HANDOVER.md  README.md  TODO.md  alembic.ini  config.env  config.py  docker-compose.dev.yml  get_results.py  get_results_ergast.py  get_session_results.py  pyproject.toml  queries.py  render.yaml  requirements.txt  season_setup.py  season_setup_fastf1.py  theundercut.py  undercut.py  utils.py
.beads/: config.yaml  issues.jsonl
alembic/: env.py
apis/: ergast.py  openf1.py
data/: 2024_1.json  2024_10.json  2024_11.json  2024_11_sprint.json  2024_12.json  2024_13.json  2024_14.json  2024_15.json  2024_16.json  2024_2.json  2024_3.json  2024_4.json  2024_5.json  2024_5_sprint.json  2024_6.json  2024_6_sprint.json  2024_7.json  2024_8.json  2024_9.json  latest.json
db/: model.py  queries.py
docs/: DESIGN-circuit-characteristics.md  DESIGN-enhanced-strategy-score.md  DESIGN-live-session-auto-refresh.md  DESIGN-race-weekend-widget.md  DESIGN-testing.md  architecture.md  drive_grade_merge_plan.md  mvp.md  t6_ingestion_grade_plan.md  tasks.md
scripts/: bootstrap.sh
tests/: __init__.py  conftest.py  test_analytics_api.py  test_analytics_service.py  test_api_v1_init.py  test_beads_config.py  test_cache_service.py  test_calendar_loader.py  test_calibration_store.py  test_car_pace.py  test_circuits_api.py  test_cli_drive_grade.py  test_config.py  test_data_loader.py  test_docker_compose_config.py  test_drive_grade.py  test_ergast.py  test_etl.py  test_fastf1_provider.py  test_homepage.py  test_homepage_e2e.py  (+18 more)
(+173 files in other folders)
