[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "theundercut"
version = "0.0.1"
dependencies = [
  "fastapi==0.111.0",
  "uvicorn[standard]==0.29.0",
  "httpx==0.27.0",
  "sqlalchemy>=2.0",
  "psycopg2-binary>=2.9",
  "redis>=5.0",
  "alembic>=1.13",
  "rq>=1.15",
  "rq-scheduler>=0.13",
  "fastf1==3.1.3",
  "pandas>=1.2.4,<2.1.0",
  "numpy>=1.26",
  "backoff>=2.2",                # for retry decorators
  "pydantic>=2.7",
  "typer[all]>=0.12
]

# expose CLI entry‑point (add to bottom of the file)
[project.scripts]
theundercut = "theundercut.cli:app"
